# AA

./: README.md  Титул.docx
hw_01/: Report.tex
lab_01/Program/: levenshtein_distance.py  mem_time_test.py
lab_01/Report/: Report.tex  diagrams.drawio
lab_02/Program/: Voyakin_lab02.py
lab_02/Report/: Report.tex
lab_03/Program/: lab_03.py  time_test.py
lab_03/Report/: Report.tex  diagrams.drawio
lab_04/Program/: mamult.cpp  matrix.cpp  matrix.hpp  time.cpp
lab_04/Report/: EvenTime.csv  OddTime.csv  Report.tex  TEvenTime.csv  TOddTime.csv  vin.graphml
lab_05/Program/: conveyor.cpp  matrix.hpp
lab_05/Report/: Report.tex  time.csv
lab_06/Program/: CMakeLists.txt
lab_06/Report/: Report.tex  aco.graphml  result.csv
lab_07/Program/: main.py
lab_07/Report/: Report.tex
rk_01/program/: kmp.cpp  kmp.h  main.cpp  makefile
rk_01/program/Input/: text_10000.txt  words_50.txt
rk_01/report/: Report.tex
